# turing-machine

./: .gitignore  CMakeLists.txt  README.md  config.tm  file.c  file.h  flow.c  flow.h  list.c  list.h  main.c  result.c  result.h  string.c  string.h  tm.c  tm.h  transition.c  transition.h
src/: dtm.c  dtm.h  main.c
test/: main.c  tm.c
